test/bad/sets/decl02.px

a = {1/2}
{Float} a' = a
